--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "author": "Bowden Kelly",
     "license": "MIT",
     "scripts": {
-        "build-sass": "sass src/public/css/main.scss dist/public/css/main.css",
         "build-ts": "tsc",
-        "build": "npm run build-sass && npm run build-ts && npm run lint && npm run copy-static-assets",
+        "build": "npm run npm run build-ts && npm run lint && npm run copy-static-assets",
         "copy-static-assets": "ts-node copyStaticAssets.ts",
         "debug": "npm run build && npm run watch-debug",
         "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
@@ -19,12 +18,11 @@
         "serve": "node dist/server.js",
         "start": "npm run serve",
         "test": "jest --forceExit --coverage --verbose",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
+        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
         "watch-node": "nodemon dist/server.js",
-        "watch-sass": "sass --watch src/public/css/main.scss dist/public/css/main.css",
         "watch-test": "npm run test -- --watchAll",
         "watch-ts": "tsc -w",
-        "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
+        "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
     },
     "dependencies": {
         "async": "3.2.0",
