--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "dotenv": "8.2.0",
         "errorhandler": "1.5.1",
         "express": "4.17.1",
+        "express-joi-validation": "^5.0.0",
+        "joi": "^17.4.0",
         "lodash": "4.17.20",
         "lusca": "1.6.1",
         "winston": "3.3.3"
@@ -47,6 +49,7 @@
         "@types/eslint": "7.2.6",
         "@types/express": "4.17.11",
         "@types/jest": "26.0.20",
+        "@types/joi": "^17.2.3",
         "@types/lodash": "4.14.168",
         "@types/lusca": "1.6.2",
         "@types/node": "14.14.25",
