--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,6 +24,7 @@ jobs:
             ${{ runner.os }}-node-
       - name: npm install, build, and test
         run: |
+          npm install
           npm ci
           npm run build --if-present
         env:
